style: added style properties

--- a/css/board.css
+++ b/css/board.css
@@ -1,7 +1,8 @@
 body {
     font-family: 'Roboto', sans-serif;
-    background: #e60e7a;
+    /* background: #e60e7a; */
     /* background: #f99; */
+    background-image: url(../images/background.png);
 }
 
 h1 {
