--- a/css/board.css
+++ b/css/board.css
@@ -2,7 +2,9 @@ body {
     font-family: 'Roboto', sans-serif;
     /* background: #e60e7a; */
     /* background: #f99; */
+    /* background-image: url(../images/background.png); */
     background-image: url(../images/background.png);
+
 }
 
 h1 {
@@ -10,4 +12,13 @@ h1 {
     margin: 2rem;
     color: #fff;
     text-shadow: 2px 2px 2px rgb(0, 0, 0, 0.46);
+}
+h2{
+    text-align: center;
+    
+    padding-right: 60px;
+    margin: 2rem;
+    color: #fff;
+    text-shadow: 2px 2px 2px rgb(0, 0, 0, 0.46);
+    width: 100%;
 }
