--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,11 @@
 
 main {
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 20px;
     grid-template-columns: repeat(4, 1fr);
     max-width: 1000px;
     margin: auto;
+    margin-bottom: 20px;
 }
 
 figure,
@@ -25,6 +26,9 @@ figure {
     transform: perspective(600px) rotateY(0deg);
     cursor: pointer;
     box-shadow: 3px 3px 16px rgb(0, 0, 0, 0.6);
+    width: 50%;
+    height: 100%;
+    margin-left: 60px;
 }
 
 figure::after {
@@ -50,6 +54,7 @@ figure.opened {
 figure .back {
     display: block;
     backface-visibility: hidden;
+ 
 }
 
 figure .searched-image {
@@ -62,21 +67,18 @@ figure .searched-image {
 }
 
 .front{
-    width: 240px;
-    height: 319px;
+    /* width: 240px;*/
+    height: 160px; 
+    width: 120px;
     border-radius: 8px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    -ms-border-radius: 8px;
-    -o-border-radius: 8px;
     align-items: center;
     justify-content: center;
     border: solid 5px blue;
 }
 
-#frontPair{
-    width: 240px;
-    height: 319px;
+.frontPair{
+    height: 160px; 
+    width: 120px;
     border-radius: 8px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
@@ -87,9 +89,9 @@ figure .searched-image {
     border: solid 5px rgb(66, 242, 66);
 }
 
-#frontNotPair{
-    width: 240px;
-    height: 319px;
+.frontNotPair{
+    height: 160px; 
+    width: 120px;
     border-radius: 8px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
